# whest

./: .gitignore  LICENSE  Makefile  README.md  TODOS.md  estimator.py  local_engine.py  pyproject.toml
assets/: demo.cast
docs/: README.md  RELEASING.md  index.md
docs/advanced/: README.md  profile-simulation.md  use-whestbench-explorer.md
docs/concepts/: README.md  ground-truth.md  problem-setup.md  scoring-model.md
docs/getting-started/: README.md  stage-1-standalone.md  stage-2-validate.md  stage-3-run-local.md  stage-4-run-subprocess.md  stage-5-package.md  stage-5-run-docker.md  stage-6-package.md
docs/how-to/: README.md  algorithm-ideas.md  debugging-checklist.md  inspect-mlp-structure.md  manage-flop-budget.md  performance-tips.md  pre-submission-checklist.md  ship-weights.md  use-evaluation-datasets.md  validate-run-package.md  write-an-estimator.md
docs/reference/: README.md  cli-reference.md  code-patterns.md  estimator-contract.md  flopscope-primer.md  local-engine-api.md  score-report-fields.md  whest-doctor.md
docs/troubleshooting/: README.md  common-participant-errors.md  faq.md
examples/: 01_random.py  02_mean_propagation.py  03_covariance_propagation.py  04_combined.py  04_shipped_weights.py  README.md
experiments/: 01_sensitivity.ipynb  02_learn_F.ipynb  README.md  RESEARCH_LOG.md  equiv_confirm.py  equivariant.py  estimator_lhs.py  exp_depth_scale_equiv.py  exp_scale_dense.py  exp_ut_features.py  exp_w_at_scale.py  exp_width_scale.py  exp_width_scale_equiv.py  rnn_harness.py  whest_1x1.py  whest_2x2.py  whest_8x8.py  whest_analytic_last.py  whest_moment_closure.py  whest_probe.py  whest_toy.py  whest_ut.py
experiments/corrector/: dataset.py  features.py  model.py  train.py
experiments/old/: whest_bias_variance.py  whest_corrector.py  whest_harness.py  whest_radius.py  whest_two_radius.py
experiments/tasks/: RCP-ideas-v2.md
experiments/tasks/old/: PLAN_v1.md  RCP_ideas_v1.md
experiments/tutorial/: 00_the_contest.ipynb  01_the_method.ipynb  02_dynamical_systems.ipynb  config.py
scripts/: record-demo-headless.py  record-demo.sh
tests/: test_local_engine.py  test_local_engine_parity.py
