[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

# Flat-layout app: the only installable modules are the two root files. Declaring them
# explicitly stops setuptools auto-discovery from choking on assets/ and experiments/
# (which are data/research dirs, not packages to install).
[tool.setuptools]
py-modules = ["estimator", "local_engine"]

[project]
name = "whest-starterkit"
version = "0.1.0"
description = "Starter kit for the ARC Whitebox Estimation Challenge"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "flopscope>=0.8.0rc5,<0.9.0",
    "scipy>=1.15.3",
    "whestbench>=0.12.0rc3,<0.13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
