[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

# Flat-layout app: the only installable modules are the two root files. Declaring them
# explicitly stops setuptools auto-discovery from choking on assets/ and experiments/
# (which are data/research dirs, not packages to install).
[tool.setuptools]
py-modules = ["estimator", "local_engine"]

[project]
name = "whest-starterkit"
version = "0.1.0"
description = "Starter kit for the ARC Whitebox Estimation Challenge"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "flopscope>=0.8.0rc5,<0.9.0",
    "jupytext>=1.19.4",
    "scipy>=1.15.3",
    "torch==2.13.0",
    "whestbench>=0.12.0rc3,<0.13.0",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"

[dependency-groups]
dev = [
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.6.1",
    "plotly>=6.9.0",
    "pytest>=8.2.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.uv.sources]
torch = { index = "pytorch" }
